crates/mineral-tui/src/snapshots/fullscreen_morph_midframe_snapshot.snap
---
source: crates/mineral-tui/src/view.rs
assertion_line: 2134
description: "全屏形变中途:封面右→左、歌词左→右对穿、消失面板收缩"
expression: t.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"              ╭ playlists ─────────────╮                     ╭ selected ─╮      "
"              │                        ⢸                     │           │      "
"              │   ╭ lyrics · synced ✦ ───────────────── [t] ╮│           │      "
"              │   │                    ⢸                    ││           │      "
"              │  登录一个音乐    深    潜ったままの         ││           │      " Hidden by multi-width symbols: [(18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (34, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " ")]
"              │  m│neral channel neteas⢸                    ││           │      "
"              ╰ 0 │ ╭ transpo僕の声を 抱えて歩いた──────╮   │╰───────────╯      " Hidden by multi-width symbols: [(30, " "), (32, " "), (34, " "), (36, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " ")]
"                  │ │             潜在表明              │   │                   " Hidden by multi-width symbols: [(35, " "), (37, " "), (39, " "), (41, " ")]
"                  │太陽にあぶり出される  僕の孤独のカタチが │                   " Hidden by multi-width symbols: [(20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " ")]
"                  │ │ 1:02 ━━━━━●───────────────── 4:22 │───│──────────────────╮"
"                  │ │   後ずさりするように  影になった  │   │                  │" Hidden by multi-width symbols: [(25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " ")]
"                  │ │        p     ␣     n     m        │   │                  │"
"                  │ 眩しすぎる正しさで 僕へと照りつけないで │                  │" Hidden by multi-width symbols: [(21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " ")]
"                  ╰─────────────────────────────────────────╯▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁│"
"                    ╰──────────────────────────────────────────────────────────╯"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
