crates/mineral-tui/src/snapshots/quit_shrink_midframe_snapshot.snap
---
source: crates/mineral-tui/src/view.rs
assertion_line: 1183
description: "退出收缩动画中途:边框内收、框外清空、框内留内容"
expression: t.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"            ╭─────────────────────────────────────────────────────╮             "
"            │    登录一个音乐源,例如:                ⢸│           │             " Hidden by multi-width symbols: [(18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (33, " "), (35, " ")]
"            │ mineral channel netease login          ⢸│           │             "
"            │                                        ⢸│           │             "
"            │   登录后重启 mineral 生效              ⢸│           │             " Hidden by multi-width symbols: [(17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (36, " "), (38, " ")]
"            │                                        ⢸│           │             "
"            │                                        ⢸│           │             "
"            │                                        ⢸│           │             "
"            │                                        ⢸│           │             "
"            │                                        ⢸│           │             "
"            │────────────────────────────────────────╯╰───────────│             "
"            │──────────────────────────╮╭ spectrum ───────────────│             "
"            │                          │╭ transport ──────────────│             "
"            │                          ││         LoveLetterTypewr│             "
"            │                          ││              Mineral ·  │             "
"            ╰─────────────────────────────────────────────────────╯             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
