crates/mineral-tui/src/snapshots/search_detail_playlist_tracks_snapshot.snap
---
source: crates/mineral-tui/src/view.rs
assertion_line: 1776
description: "Search 歌单 detail 曲目表:♥/title/artist/album/len 五列 + 表头(♥ 收藏)"
expression: t.backend()
---
"╭search────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ♫ netease   ▤ playlists  emo                                                                                         │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭results─────────────────────────────────────╮╭▤ playlist · emo mix────────────────────────────────────────────────────╮"
"│  playlist                            tracks││                       emo mix                                          │"
"│▌ emo mix                             3     ││                       3 tracks                                         │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                              ────────────                              │"
"│                                            ││    title                     artist            album             len   │"
"│                                            ││▌   Endserenading             Mineral           EndSerenading     3:45  │"
"│                                            ││  ♥ 守门员                    Chinese Football  Chinese Football  3:53  │" Hidden by multi-width symbols: [(52, " "), (54, " "), (56, " ")]
"│                                            ││    Palisade                  Mineral           EndSerenading     4:31  │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"╰ 1 / 1 ─────────────────────────────────────╯╰ 1 / 3 ─────────────────────────────────────────────────────────────────╯"
"╭ transport ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│                                                           —                                                          │"
"│                                                           ·                                                          │"
"│ 0:00 ●───────────────────────────────────────────────────────────────────────────────────────────────────────── -:-- │"
"│                                                 [⏮]   [▶]   [⏭]   [→]                                                │"
"│                                                  p     ␣     n     m                                                 │"
"│ vol ████████████ 100%                                 mode seq                                                 fmt — │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
