crates/mineral-tui/src/snapshots/search_detail_section_sweep_midframe_snapshot.snap
---
source: crates/mineral-tui/src/view.rs
assertion_line: 1910
description: "Search artist detail 切区中途:Top Songs↔Albums 横向合成(列表区,Tab/头图不滑)"
expression: t.backend()
---
"╭search────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ♫ netease   ✦ artists  mineral                                                                                       │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭results─────────────────────────────────────╮╭✦ artist · Mineral──────────────────────────────────────────────────────╮"
"│  artist                              fans  ││                     Mineral                                            │"
"│▌ Mineral                             176k  ││                     176,393 fans                                       │"
"│                                            ││                     2 albums · 21 songs                                │"
"│                                            ││                                                                        │"
"│                                            ││                     Texas emo, 1994–1998                               │"
"│                                            ││                                                                        │"
"│                                            ││                              ────────────                              │"
"│                                            ││Top Songs  Albums   [ / ] section                                       │"
"│                                            ││                          album                    len     name         │"
"│                                            ││ypewriter                 EndSerenading            3:45  ▌ EndSerenading│"
"│                                            ││                          EndSerenading            4:31    ThePowerOfFai│"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"╰ 1 / 1 ─────────────────────────────────────╯╰ 1 / 2 ─────────────────────────────────────────────────────────────────╯"
"╭ transport ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│                                                           —                                                          │"
"│                                                           ·                                                          │"
"│ 0:00 ●───────────────────────────────────────────────────────────────────────────────────────────────────────── -:-- │"
"│                                                 [⏮]   [▶]   [⏭]   [→]                                                │"
"│                                                  p     ␣     n     m                                                 │"
"│ vol ████████████ 100%                                 mode seq                                                 fmt — │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
